examples/test/testpolicy15447.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15447
  namespace: namespace251
spec:
  podSelector:
    matchLabels:
      key34: value35
      key7: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key2: value11
          key44: value34
          key15: value42
      podSelector:
        matchLabels:
          key9: value44
          key29: value28
